Fixed CheckButton styling, no longer break input

--- a/src/components/UI/CheckboxButton.module.scss
+++ b/src/components/UI/CheckboxButton.module.scss
@@ -1,36 +1,42 @@
 @import "/src/styles/variables";
 
-input {
-  cursor: pointer;
-  opacity: 0;
+.button {
+  position: relative;
+  display: grid;
+  place-items: center;
 
-  position: absolute;
-  height: 100%;
-  width: 100%;
+  input {
+    cursor: pointer;
+    opacity: 0;
 
-  &:hover+label {
-    background-color: hsl(147, 40%, 90%);
+    position: absolute;
+    height: 100%;
+    width: 100%;
+
+    &:hover+label {
+      background-color: hsl(147, 40%, 90%);
+    }
+
+    &:checked+label {
+      color: white;
+      background-color: hsl(147, 60%, 30%);
+    }
+
+    &:hover+label,
+    &:checked+label {
+      box-shadow:
+        0 0 6px hsl(147, 20%, 80%),
+        0 0 12px hsl(147, 10%, 90%),
+    }
   }
 
-  &:checked+label {
-    color: white;
-    background-color: hsl(147, 60%, 30%);
+  label {
+    padding: 0.5em 1em;
+    border-radius: 999rem;
+
+    color: $very-green;
+    background-color: hsl(147, 40%, 96%);
+
+    transition: .2s ease-out;
   }
-
-  &:hover+label,
-  &:checked+label {
-    box-shadow:
-      0 0 6px hsl(147, 20%, 80%),
-      0 0 12px hsl(147, 10%, 90%),
-  }
-}
-
-label {
-  padding: 0.5em 1em;
-  border-radius: 999rem;
-
-  color: $very-green;
-  background-color: hsl(147, 40%, 96%);
-
-  transition: .2s ease-out;
 }
